fix: remembrance fix round 1 — Q1-Q9 closed
Q1 (CRITICAL): DeliveryWorkerTest gains the missing law-(b) test — a
hand-rolled ThrowingThenDelegatingMemory (no mocking library) throws on the
first remember() call, proving the delivery survives undeleted and the
phase is untouched, then heals on the next nudge() with exactly one
ToolExchange recorded. RecordingMemory.facts() (previously dead) is used to
assert it.

Q2: Remembrance.AssistantMessage's javadoc, Memory's law-2 ordering clause,
docs/concepts/memory.md, and DefaultAgent's remember() javadoc now state the
real contract: an AssistantMessage may carry tool_use blocks, its
ToolExchanges may remember before OR after it, and recall() withholds it
until every named call id has answered.

Q3: DefaultAgent#drainOne no longer swallows a throwing remember — it
re-queues the observation (as the stale-state arm already does) and
rethrows, so observe()/drive() surfaces the failure to the caller instead
of hot-looping a permanently broken Memory. Memory's law-1 and the docs spell
out the durable-vs-shell duality this creates. New test proves the requeue
and the healed retry.

Q4: deliverClaimedGrant documents the honest exposure window the retired
plain-memory guard used to close — a granted tool's external side effect
can now re-fire on every heartbeat until memory recovers. No code change;
the design question is James's to rule on separately.

Q5: SubstrateMemory#remember reads the RAW substrate head (never decodes
through a caller-supplied codec) for its next seq, and the idempotency
marker becomes one create-only document per remembered key
(kind=memory-keys, key=agentId+"/"+key) instead of a single growing
per-scope list — O(1), no read-before-write. New test proves a marker
conflict converges.

Q6: DeliveryWorker's stale "journal appends" phrase, over a batch that no
longer carries any, is dropped.

Q7: The now-unused RaceOnceOnAppendSubstrate is deleted; its two javadoc
mentions in RaceOnceOnBatchSubstrate/RaceOnceO